# mb2wikidatabot

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  README.md  artists.py  common.py  pyproject.toml  requirements.txt  rg.py  run.py  stats.py  user-config.py  works.py
.github/workflows/: docker.yml  test.yml
bot/: __main__.py  checks.py  common.py  const.py  exceptions.py  mb_client.py  queries.py  settings.py.dist
docker/: consul-template-mb2wdbot.conf  consul-template.conf  passwd.ctmpl  push.sh  settings.py.ctmpl  wikidata-bot.service
tests/: conftest.py  test_bot.py  test_mb_client.py  test_queries_and_exceptions.py  test_skip_logic.py  test_wikilink_routing.py
